--- a/conda-forge.yml
+++ b/conda-forge.yml
@@ -1,3 +1,10 @@
+build_platform:
+  osx_arm64: osx_64
+  linux_aarch64: linux_64
+  linux_ppc64le: linux_64
+provider:
+  linux_aarch64: azure
+  linux_ppc64le: azure
 github:
   branch_name: main
   tooling_branch_name: main
